--- a/docs/style.css
+++ b/docs/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Redacted&family=Roboto:wght@400;700&display=swap');
 
 * {
-  font-family: 'Redacted', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -59,6 +59,7 @@ figcaption {
 }
 
 .footer a {
+  font-family: 'Redacted', Courier, monospace;
   color: #9100bd;
 }
 
